@@ -5,6 +5,7 @@ http://semantic-mediawiki.org/wiki/Semantic_Result_Formats
 == SRF 1.6.1 ==
 
 * Fixed rendering bug in the tagcloud format occuring for inline queries.
+* Fixed jqPlotBar and jqPlotPie rendering on Special:Ask and other special pages. 
 
 == SRF 1.6 ==
 
